--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11221,7 +11221,7 @@ fieldset:disabled .btn {
 .leftBar {
   width: 300px;
   height: 1200px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #49B466;
   position: fixed;
 }
 
@@ -11275,10 +11275,27 @@ a {
   display: block;
 }
 
-.card-body {
-  padding: 0;
+.card-body {padding: 0;}
+
+#todayIssueBody {padding: 20px;}
+
+.leftBar {color: white; line-height: 2.3;}
+
+.logo {padding-left: 20px; padding-top: 10px; font-family: 'KyoboHandwriting2022khn'; font-size: 25px;}
+
+.serviceName {padding-left: 20px; padding-top: 10px;}
+
+.logoImg{width: 30px;}
+
+.goToMainSite {padding-left: 20px; padding-top: 10px;}
+
+.dashboard{padding-left: 25px; padding-top: 10px;}
+
+@font-face {
+  font-family: 'KyoboHandwriting2022khn';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/KyoboHandwriting2022khn.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
 }
 
-#todayIssueBody {
-  padding: 20px;
-}
+.memberManagement, .qanda, .reportManagement, .showMeTheMoney{padding-left: 25px; padding-top: 10px;}
